--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <nav id="header-nav" class="navbar navbar-default">
 	<div class="container">
 		<div class="navbar-header">
-		 <a href="index1.html" class="left" style="float:left;">
+		 <a href="index.html" class="left" style="float:left;">
 			<div id="logo-img" alt="logo image"></div>
 		
         </a>
 		<div class="navbar-brand">
-			<a href="index1.html"><h1>Food LLC</h1></a>
+			<a href="index.html"><h1>Food LLC</h1></a>
 			<!--<p>
 				<img src="star-k-logo.png" alt="certification">
 				<span>certification</span>
