--- a/index.html
+++ b/index.html
@@ -19,17 +19,10 @@
 <nav id="header-nav" class="navbar navbar-default">
 	<div class="container">
 		<div class="navbar-header">
-		 <a href="index.html" class="left" style="float:left;">
-			<div id="logo-img" alt="logo image"></div>
-		
-        </a>
-		<div class="navbar-brand">
-			<a href="index.html"><h1>Food LLC</h1></a>
-			<!--<p>
-				<img src="star-k-logo.png" alt="certification">
-				<span>certification</span>
-			</p> -->
-		</div>
+  <a href="index.html" class="navbar-brand "><p>Food, LLC</p>
+   <div id="logo-img" alt="logo image"></div>
+ </a>
+        </div>
 		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -112,3 +105,6 @@
 			</div>
 </section>
 </div>
+</header>
+</body>
+</html>
