--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nav id="header-nav" class="navbar navbar-default">
 	<div class="container">
 		<div class="navbar-header">
-  <a href="index.html" class="navbar-brand "><p>Food, LLC</p>
+  <a href="index.html" class="navbar-brand" style="float:left;"><p>Food, LLC</p>
    <div id="logo-img" alt="logo image"></div>
  </a>
         </div>
