--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
 </head>
 <body>
 	<header>
-<nav id="header-nav" class="navbar navbar-default">
-	<div class="container">
-		<div class="navbar-header">
-  <a href="index.html" class="navbar-brand" style="float:left;"><p>Food, LLC</p>
-   <div id="logo-img" alt="logo image"></div>
- </a>
-        </div>
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+ <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="index.html" class="navbar-brand "><p>Food, LLC</p></a>
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -31,8 +28,9 @@
           </button>
         </div>
 
+
         <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
+           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
               <a href="chicken.html">
                <span class="glyphicon glyphicon-cutlery"></span><br class="hidden-xs">Chicken</a>
