--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="index.html" class="navbar-brand "><p>Food, LLC</p></a>
+          <a href="index.html" class="navbar-brand " style="float:left; text-align: left;"><p>Food, LLC</p></a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
